# arch_base

./: .gitignore  config.yaml  main.py  pyproject.toml  pytest.ini  readme.md
src/: pyproject.toml
src/eco/: __init__.py  core.py  lectura.py  resources.py  restas.py  sumas.py  utils.py
src/eco/algoritmos/: __init__.py  algoritmo_a.py  algoritmo_b.py  base.py  loader.py
src/eco/avanzadas/: estadisticas.py
src/yaml_loader/: loader.py
tests/: test_core.py  test_utils.py
